# Source-Tracker

./: CMakeLists.txt  README.md
include/: commands.hpp  globals.hpp  util.hpp
include/commands/: branches.hpp  delete_branch.hpp  init.hpp  new_branch.hpp  switch.hpp
include/util/: filepaths.hpp
src/: CMakeLists.txt
src/main/: CommandHandler.cpp  globals.cpp
src/main/commands/: branches.cpp  delete_branch.cpp  init.cpp  new_branch.cpp  switch.cpp
src/main/util/: util.cpp
src/main/util/filepaths/: filepaths.cpp
